--- a/client-app/package.json
+++ b/client-app/package.json
@@ -22,6 +22,7 @@
     "@supabase/supabase-js": "^2.46.1",
     "dayjs": "^1.11.13",
     "next": "15.0.2",
+    "next-nprogress-bar": "^2.3.14",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-redux": "^9.1.2",
